bin/tests/snapshots/multiline_spacing__6a238d3ada446fb53dfd139d730d43bb_fix.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];
  zed = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -4,6 +4,7 @@
   kernelModules = [
     "a"
     "b"
   ];
+
   zed = 2;
 }
