bin/tests/snapshots/multiline_spacing__6a238d3ada446fb53dfd139d730d43bb_lint_errfmt.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];
  zed = 2;
}
---
<temp_file_path>>8:3:W:33:[multiline_spacing] a blank line should follow the multiline attribute above
