bin/tests/snapshots/multiline_spacing__ada1348be06bb0313f8773142381f143_lint_stderr.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [ "a" ];
  zed = 2;
}
---
