bin/tests/snapshots/multiline_spacing__b7acca94e020b1a16a3ab3dc8aaa546a_fix.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];
  zed = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,8 +1,10 @@
 {
   foo = 1;
+
   kernelModules = [
     "a"
     "b"
   ];
+
   zed = 2;
 }
