bin/tests/snapshots/multiline_spacing__b7acca94e020b1a16a3ab3dc8aaa546a_lint_errfmt.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];
  zed = 2;
}
---
<temp_file_path>>3:3:W:33:[multiline_spacing] a blank line should come before this multiline attribute
