bin/tests/snapshots/multiline_spacing__b7acca94e020b1a16a3ab3dc8aaa546a_lint_stderr.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  kernelModules = [
    "a"
    "b"
  ];
  zed = 2;
}
---
[multiline_spacing] Warning: Multiline attribute is not separated by blank lines
   ╭─[ <temp_file_path>:3:3 ]
   │
 3 │ ╭─▶   kernelModules = [
   ┆ ┆   
 6 │ ├─▶   ];
   │ │          
   │ ╰────────── a blank line should come before this multiline attribute
───╯
