bin/tests/snapshots/multiline_spacing__c146621da73f738bd551e4c76578483b_lint_errfmt.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;

  kernelModules = [
    "a"
    "b"
  ];
}
---
