bin/tests/snapshots/multiline_spacing__c66301143d9d8ba51f27d8df4886c166_fix.snap
---
source: bin/tests/multiline_spacing.rs
assertion_line: 7
---
{
  foo = 1;
  package = pkgs.writeShellApplication {
    name = "x";
  };
  zed = 2;
}
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1,7 +1,9 @@
 {
   foo = 1;
+
   package = pkgs.writeShellApplication {
     name = "x";
   };
+
   zed = 2;
 }
